deploy-comment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-comment
  labels:
    app: deployment-comment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: deployment-comment
  template:
    metadata:
      labels:
        app: deployment-comment
    spec:
      containers:
      - name: postgres
        image: postgres
        ports:
        - containerPort: 5432
      - name : comment-service
        image: mustain5/comment-service
        ports:
        - containerPort: 3333
