comment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comment
  labels:
    app: comment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comment
  template:
    metadata:
      labels:
        app: comment
    spec:
      containers:
      - name : comment
        image: mustain5/comment-service
        ports:
          - containerPort: 3334

---
apiVersion: v1
kind: Service
metadata:
  name: comment-service
spec:
  type: NodePort
  selector:
    app: comment
  ports :
  - port: 3334
    targetPort: 3334
