member.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: member
  labels:
    app: member
spec:
  replicas: 1
  selector:
    matchLabels:
      app: member
  template:
    metadata:
      labels:
        app: member
    spec:
      containers:
      - name : member-service
        image: mustain5/member-service
        ports:
          - containerPort: 3333

---
apiVersion: v1
kind: Service
metadata:
  name: member-service
spec:
  selector:
    app: deployment
  ports :
  - port: 3333
    targetPort: 3333
    name: member-service
