test.yaml
apiVersion: v1
kind: Service
metadata:
  name: members-service
  labels:
    app: members-service
spec:
  ports:
  - port: 3333
    targetPort: 3333 
  selector:
    app: members-service

---
apiVersion: v1
kind: Service
metadata:
  name: comment-service
  labels:
    app: comment-service
spec:
  ports:
  - port: 3334
    targetPort: 3334
  selector:
    app: comment-service
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  labels:
    app: postgres
spec:
  ports:
  - port: 5432
    targetPort: 5432
  selector:
    app: postgres

---
