ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: nginx.mustain.local
      http:
        paths:
          - path: /comments
            pathType: Prefix
            backend:
              service:
                name: comment-service
                port:
                  number: 3334
          - path: /member
            pathType: Prefix
            backend:
              service:
                name: member-service
                port:
                  number: 3333
